Fix dragon head BG on mobile

--- a/src/styles/components/_dragon-bg.scss
+++ b/src/styles/components/_dragon-bg.scss
@@ -3,6 +3,7 @@
   height: auto;
   margin-top: -50%;
   margin-left: -100%;
+  margin-right: -100%;
   left: 50%;
   position: absolute;
   top: 0;
@@ -12,6 +13,7 @@
   @media (min-width: 50rem) {
     margin-top: -40%;
     left: 75%;
+    right: auto;
     width: 150%;
   }
 
